[package]
name = "shulker-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13.1"
argon2 = "0.3.1"
serde = { version = "1.0.130", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde_millis = "0.1.1"

[dependencies.rustbreak]
version = "2.0.0"
features = ["bin_enc"]
