[package]
name = "shulker-rs"
version = "0.1.0"
edition = "2018"
build = "build.rs"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
argon2 = "0.3.1"
serde = { version = "1.0.130", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde_millis = "0.1.1"
lazy_static = "1.4.0"
config = "0.11.0"
rand_core = { version = "0.6.3", features = ["std"] }
sixtyfps = "0.1.5"
ipipe = "0.9.0"
crossbeam-channel = "0.5.1"
byteorder = "1.4.3"

[dependencies.rustbreak]
version = "2.0.0"
features = ["bin_enc"]

[build-dependencies]
sixtyfps-build = "0.1.5"

[target.'cfg(target_os="linux")'.dependencies]
rppal = "0.13.1"
